# plethora

./: .gitignore  LICENSE  README.md  common  common.sh  formatter.py  index.html  linux-setup  mac-setup  package-lock.json  package.json  pyproject.toml  refference.md  scrape-high  scrape-high.sh  scrape-low  scrape-low.sh  scrape-med  scrape-med.sh  scrape.py  scraper.py  termux-setup  vite.config.js  windows-setup.bat
.github/workflows/: publish.yml
docs/: index.html
docs/assets/: index-2YZjLQm6.js  index-BBUjLGa5.js  index-BwSja_Pk.css  index-CvBOkThj.css  index-DRqe3u13.js  index-DZQI1HfN.css  index-DtFhjg2O.js  index-DzmlbR9V.js  index-JMA65kty.js  index-fla5sbkA.css  index-qaxT2MT0.js  index-soMYeTN0.css  index-zXodS4wA.js  index.es-B8R-585I.js  index.es-BsWak8mB.js  index.es-BwiuZWQg.js  index.es-D-W-iXDP.js  index.es-DCWvykSk.js  index.es-Fa3dvBH-.js  index.es-Mo7S5Ujn.js
docs/beta/: index.html
plethora/: __init__.py  cli.py  scraper.py
reports/: best_static_site_generators_low_20260227_170421.txt  python_web_scraping_high_20260227_170354.json  python_web_scraping_high_20260227_170354.txt  python_web_scraping_low_20260227_154100.txt  python_web_scraping_low_20260227_154449.txt  python_web_scraping_medium_20260227_154613.txt  what_is_python_low_20260227_184533.txt
src/: App.jsx  index.css  scraper.js
src/components/: AiChat.jsx  AiChat.module.css  CliSection.jsx  CliSection.module.css  Features.jsx  Footer.jsx  Footer.module.css  Header.jsx  Header.module.css  Hero.jsx  Hero.module.css  Results.jsx  Results.module.css  SearchBox.jsx  WhyPlethora.jsx  (+4 more)
(+10 files in other folders)
